tests/ui/type/issue-7607-1.rs
struct Foo {
    x: isize
}

impl Fo { //~ ERROR cannot find type `Fo` in this scope
    fn foo() {}
}

fn main() {}
